src/test/ui/issues/issue-17546.stderr
error[E0573]: expected type, found variant `NoResult`
  --> $DIR/issue-17546.rs:14:17
   |
LL |     fn new() -> NoResult<MyEnum, String> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
   | 
  ::: $SRC_DIR/libcore/result.rs:LL:COL
   |
LL | pub enum Result<T, E> {
   | --------------------- similarly named enum `Result` defined here
   |
help: try using the variant's enum
   |
LL |     fn new() -> foo::MyEnum {
   |                 ^^^^^^^^^^^
help: an enum with a similar name exists
   |
LL |     fn new() -> Result<MyEnum, String> {
   |                 ^^^^^^

error[E0573]: expected type, found variant `Result`
  --> $DIR/issue-17546.rs:24:17
   |
LL |     fn new() -> Result<foo::MyEnum, String> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a type
   |
help: possible better candidates are found in other modules, you can import them into scope
   |
LL |     use std::fmt::Result;
   |
LL |     use std::io::Result;
   |
LL |     use std::prelude::v1::Result;
   |
LL |     use std::result::Result;
   |
     and 1 other candidate

error[E0573]: expected type, found variant `Result`
  --> $DIR/issue-17546.rs:30:13
   |
LL | fn new() -> Result<foo::MyEnum, String> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a type
   |
help: possible better candidates are found in other modules, you can import them into scope
   |
LL | use std::fmt::Result;
   |
LL | use std::io::Result;
   |
LL | use std::prelude::v1::Result;
   |
LL | use std::result::Result;
   |
     and 1 other candidate

error[E0573]: expected type, found variant `NoResult`
  --> $DIR/issue-17546.rs:35:15
   |
LL | fn newer() -> NoResult<foo::MyEnum, String> {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
  ::: $SRC_DIR/libcore/result.rs:LL:COL
   |
LL | pub enum Result<T, E> {
   | --------------------- similarly named enum `Result` defined here
   |
help: try using the variant's enum
   |
LL | fn newer() -> foo::MyEnum {
   |               ^^^^^^^^^^^
help: an enum with a similar name exists
   |
LL | fn newer() -> Result<foo::MyEnum, String> {
   |               ^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0573`.
